# gl-app

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build_wasm.bat  build_wasm.sh  shell.html  testrun.py
drafts/: textures.md
impl/: CMakeLists.txt  default_platform.cpp  em_platform.cpp
impl/render/opengl/: default_setup.h
impl/resource/: CMakeLists.txt
impl/resource/emscripten/: em_resource.cpp  em_resource.hpp
impl/resource/libcxx/: CMakeLists.txt  libcxx_resource.cpp  libcxx_resource.hpp
resources/: .gitignore
src/: CMakeLists.txt  app.cpp  app.h  app.hpp  demostuff.cpp  demostuff.hpp  dialog.cpp  dialog.hpp  fnv1a.cpp  fnv1a.hpp  font.cpp  font.hpp  hid.hpp  inputhandler.hpp  inputqueue.hpp  main.cpp  platform.cpp  platform.hpp  resource.cpp  resource.h
src/controls/: CMakeLists.txt  button.cpp  button.hpp  control.cpp  control.hpp  layout.cpp  layout.hpp  panel.cpp  panel.hpp
src/impl/: CMakeLists.txt  default_platform.cpp  default_platform.hpp  impl_list.cmake
src/impl/render/: CMakeLists.txt  setup.hpp
src/impl/render/opengl/: CMakeLists.txt  default_includes.hpp  em_includes.hpp  oglframebuffer.cpp  oglprogram.cpp  oglprogram.hpp  oglrendergui.cpp  oglrendergui.hpp  oglrendersticks.cpp  oglsetup.cpp  oglshader.cpp  oglshader.hpp  ogltexture.cpp  ogltexture.hpp  opengl.hpp  programglsl.cpp  programglsl.hpp  renderguiglsl.cpp  renderguiglsl.hpp  rendersticksglsl.cpp  setup.cpp  shaderglsl.cpp  shaderglsl.hpp  texture.cpp  texture.hpp
src/impl/resource/: CMakeLists.txt  em_resource.cpp  fs_resource.cpp
src/impl/resource/emscripten/: CMakeLists.txt  em_resource.cpp  em_resource.hpp
src/impl/resource/filesystem/: CMakeLists.txt  fs_resource.cpp  fs_resource.hpp
src/impl/threading/: CMakeLists.txt  em_threading.cpp  no_threading.cpp  setup.hpp
src/impl/window/: CMakeLists.txt  glfw.cpp  setup.hpp
src/impl/window/glfw/: CMakeLists.txt  glfw.cpp  glfw.hpp
src/input/: CMakeLists.txt  event.hpp  forward.hpp  hid.hpp  inputhandler.cpp  inputhandler.hpp  inputqueue.cpp  inputqueue.hpp  keycodes.hpp  mousecodes.hpp
src/render/: CMakeLists.txt  atlas.cpp  atlas.hpp  bake.cpp  bake.hpp  font.cpp  font.h  forward.hpp  geometry.cpp  geometry.h  geometry.hpp  render.hpp  render2d.cpp  render2d.hpp  render2d_draw.cpp  render2d_draw.hpp  render2d_list.hpp  rendergui.cpp  rendergui.h  rendergui.hpp  texture.cpp  texture.hpp  texturemanager.h
src/render/font/: CMakeLists.txt  font.hpp  fontatlas.cpp  fontatlas.hpp  fontmanager.cpp  fontmanager.hpp  forward.hpp
src/render/glsl/: CMakeLists.txt  programglsl.cpp  programglsl.h  programglsl.hpp  renderguiglsl.cpp  renderguiglsl.h  renderguiglsl.hpp  shaderglsl.cpp  shaderglsl.h  shaderglsl.hpp
src/render/gui/: CMakeLists.txt  draw.cpp  draw.hpp  drawlist.hpp  fontatlas.cpp  fontatlas.hpp  fontmanager.cpp  fontmanager.hpp  forward.hpp  panel.hpp  rendergui.hpp
src/render/opengl/: CMakeLists.txt  em_includes.hpp  forward.hpp  oglframebuffer.cpp  oglframebuffer.hpp  oglprogram.cpp  oglprogram.hpp  oglrendergui.cpp  oglrendergui.hpp  oglrendersticks.cpp  oglsetup.cpp  oglshader.cpp  oglshader.hpp  opengl.hpp  setup.hpp
src/render/sticks/: CMakeLists.txt  draw.cpp  draw.hpp  drawlist.hpp  rendersticks.hpp  sticks.hpp
src/resources/: CMakeLists.txt  resource.cpp  resource.hpp
src/util/: str.hpp
